--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "app",
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "@rails/ujs": "^6.0.0",
     "bootstrap": "^5.1.3",
     "sass": "^1.49.0",
+    "turbolinks": "^5.2.0",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2"
   },
